--- a/ui/app/templates/auth/login.jinja2
+++ b/ui/app/templates/auth/login.jinja2
@@ -20,7 +20,7 @@
                     {{ form.entity_name(class="form-input", placeholder="username", autocomplete="username") }}
                 </div>
                 {% if form.entity_name.description %}
-                <div class="field-description">{{ form.entity_name.description|safe }}</div>
+                <div class="field-description">{{ form.entity_name.description }}</div>
                 {% endif %}
             </div>
 
