--- a/ui/app/templates/invoice/detail.jinja2
+++ b/ui/app/templates/invoice/detail.jinja2
@@ -10,7 +10,7 @@
     </tr>
     <tr>
         <td>Created at</td>
-        <td>{{ human_readable_date(invoice.created_at) | safe }}</td>
+        <td>{{ human_readable_date(invoice.created_at) }}</td>
     </tr>
     <tr>
         <td>From</td>
