--- a/ui/app/templates/transaction/detail.jinja2
+++ b/ui/app/templates/transaction/detail.jinja2
@@ -11,7 +11,7 @@
     </tr>
     <tr>
         <td>Created at</td>
-        <td>{{ human_readable_date(transaction.created_at) | safe }}</td>
+        <td>{{ human_readable_date(transaction.created_at) }}</td>
     </tr>
     <tr>
         <td>From</td>
@@ -76,7 +76,7 @@
     <tr>
         <td>Modified at</td>
         <td>
-            {{ human_readable_date(transaction.modified_at) | safe }}
+            {{ human_readable_date(transaction.modified_at) }}
         </td>
     </tr>
 
